--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "npx webpack-dev-server",
-    "build": "npx webpack --mode production",
+    "start": "set NODE_ENV=development && npx webpack-dev-server",
+    "build": "set NODE_ENV=production && npx webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
